# CapiLauncher

./: .gitmodules  latest.json  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Header.tsx
src/pages/: launch.tsx  register.tsx  settings.tsx
