[package]
name = "capilauncher"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "capilauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open_launcher = "1.5.5"
tokio = { version = "1", features = ["full"] }
homedir = "0.3.4"
flate2 = "1.0.35"
reqwest = { version = "0.12", features = ["blocking"] }
tar = "0.4.43"
zip = "2.2.1"
rand = "0.8.5"
base64 = "0.22.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
